Downloads now work with full status feedback

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
 			<div id="download-form">
 				<span id="url-label">Put in the Flickr set address<br/><small>(Like, http://www.flickr.com/photos/someone/sets/somesetnumber)</small></span><br/>
 				<input id="url-field" type="text" size="80"/><br/>
+				<div id="reporter"></div>
 				<a href="#" id="btn-download">Download</a>
 			</div>
 		</div>
