--- a/static/css/app.css
+++ b/static/css/app.css
@@ -9,6 +9,14 @@ header {
 	text-shadow: 0px 0px 5px grey;
 }
 
+#reporter {
+	margin-bottom: 1.5em;
+}
+
+.error {
+	color: red;
+}
+
 #download-form {
 	margin-top: 4em;
 	width: 100%;
