Add -c option to wget in flickr.py + fix app title + link color

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -2,6 +2,11 @@ body {
 	background-color: #ccc;
 }
 
+a {
+	text-decoration: none;
+	color: #0C83AB;
+}
+
 header {
 	text-align: center;
 	font-family: 'McLaren', serif;
@@ -11,10 +16,6 @@ header {
 
 #reporter {
 	margin-bottom: 1.5em;
-}
-
-.error {
-	color: red;
 }
 
 #download-form {
