--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Getset - Flickr Downloading</title>
+		<title>Grabset - Flickr Downloading</title>
 	</head>
 		<link rel="stylesheet" href="{{ STATIC }}css/app.css"/>
 		<link href='http://fonts.googleapis.com/css?family=McLaren' rel='stylesheet' type='text/css'>
